--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <a href="url"><img src="./images/me.jpg" align="left" width="300" ></a>
-
 <h2 class="code-line" data-line-start=0 data-line-end=1 ><a id="About_me_0"></a>About me</h2>
 <p class="has-line-data" data-line-start="2" data-line-end="3">Hello, I’m Kat! I am currently a PhD student in the Laboratory for Compositional Systems and Methods at Tallinn University of Technology under the supervision of Paweł Sobociński and Hellis Tamm.</p>
 <h3 class="code-line" data-line-start=4 data-line-end=5 ><a id="Research_interests_4"></a>Research interests</h3>
@@ -9,5 +8,6 @@
 <strong>Master’s degree @ Tallinn University of Technology &amp; University of Tartu.</strong></p>
 <p class="has-line-data" data-line-start="13" data-line-end="15"><code>September 2022-now.</code><br>
 <strong>PhD @ Tallinn University of Technology.</strong></p>
-
+<h2 class="code-line" data-line-start=16 data-line-end=17 ><a id="Contact_details_16"></a>Contact details</h2>
+<p class="has-line-data" data-line-start="17" data-line-end="18"><a href="mailto:ekaterina.zhuchko@ttu.ee">ekaterina.zhuchko@ttu.ee</a></p>
 
