--- a/index.html
+++ b/index.html
@@ -1,61 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>My Website</title>
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-</head>
-
-<body>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<a class="navbar-brand" href="#">My Website</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
-<li class="nav-item active">
-<a class="nav-link" href="#">Home</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="#">About</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="#">Contact</a>
-</li>
-</ul>
-</div>
-</nav>
-
-<!-- Page content -->
-<div class="container mt-5">
-<h1>Welcome to My Website!</h1>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-sem. Etiam finibus odio quis feugiat facilisis.
-</p>
-</div>
-
-<!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-crossorigin="anonymous"></script>
-</body>
-
-</html>
+<a href="url"><img src="./images/me.jpg" align="left" width="300" ></a>
+<h2 class="code-line" data-line-start=0 data-line-end=1 ><a id="About_me_0"></a>About me</h2>
+<p class="has-line-data" data-line-start="2" data-line-end="3">Hello, I’m Kat! I am currently a PhD student in the Laboratory for Compositional Systems and Methods at Tallinn University of Technology under the supervision of Paweł Sobociński and Hellis Tamm.</p>
+<h3 class="code-line" data-line-start=4 data-line-end=5 ><a id="Research_interests_4"></a>Research interests</h3>
+<p class="has-line-data" data-line-start="6" data-line-end="7">My main research interests are in automata theory, cryptography and formal methods.</p>
+<h2 class="code-line" data-line-start=8 data-line-end=9 ><a id="Education_8"></a>Education</h2>
+<p class="has-line-data" data-line-start="10" data-line-end="12"><code>2019-2022.</code><br>
+<strong>Master’s degree @ Tallinn University of Technology &amp; University of Tartu.</strong></p>
+<p class="has-line-data" data-line-start="13" data-line-end="15"><code>September 2022-now.</code><br>
+<strong>PhD @ Tallinn University of Technology.</strong></p>
+<h2 class="code-line" data-line-start=16 data-line-end=17 ><a id="Contact_details_16"></a>Contact details</h2>
+<p class="has-line-data" data-line-start="17" data-line-end="18"><a href="mailto:ekaterina.zhuchko@ttu.ee">ekaterina.zhuchko@ttu.ee</a></p>
 
 <!-- 
 <div id="header"></div>
