adjust padding in title

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ body {
   width: "100%";
   text-align: center;
   margin: 8px;
-  font-size: 4em;
+  font-size: 4.4em;
+  padding-left: 0.7em;
   font-family: 'Bigelow';
 }
 
