--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
   </div>
   <div class="text-section">
     <h2 id="about-me">💭 About me</h2>
-    <p>Hello, I’m Kat! I am currently a PhD student in the Laboratory for Compositional Systems and Methods at Tallinn University of Technology under the supervision of Paweł Sobociński and Hellis Tamm.</p>
+    <p>Hello, I’m Kat! I am currently a PhD student in the Laboratory for Compositional Systems and Methods at Tallinn University of Technology under the supervision of Hellis Tamm and Paweł Sobociński.</p>
     <h2 id="research-interests">🔬 Research interests</h3>
     <p>My main research interests are in automata theory, cryptography, and formal methods.</p>
     <h2 id="education">🎓 Education</h2>
