--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@ body {
   </div>
   <div class="text-section">
     <h2 id="about-me">💭 About me</h2>
-    <p>Hello, I’m Kat! I am currently a PhD student in the Laboratory for Compositional Systems and Methods at Tallinn University of Technology under the supervision of Hellis Tamm and Paweł Sobociński.</p>
-    <h2 id="research-interests">🔬 Research interests</h3>
-    <p>My main research interests are in automata theory, cryptography, and formal methods.</p>
+    <p>Hello, I’m Kat! I am currently a PhD student in the <a href="https://compose.ioc.ee/">Laboratory for Compositional Systems and Methods</a> at Tallinn University of Technology under the supervision of Hellis Tamm and Paweł Sobociński.
+       My main research interests are in automata theory and formal methods.</p>
+    <p>Check out my <a href="publications.html">published works</a>.</p>
     <h2 id="education">🎓 Education</h2>
     <p><code>2019-2022.</code><br>
       <strong>Master’s degree @ 🇪🇪 Tallinn University of Technology &amp; University of Tartu.</strong></p>
     <p><code>September 2022-now.</code><br>
       <strong>PhD @ 🇪🇪 Tallinn University of Technology.</strong></p>
     <h2 id="contact-details">💌 Contact details</h2>
-    <p><a href="mailto:ekaterina.zhuchko@ttu.ee">ekaterina.zhuchko@ttu.ee</a></p>
+    <p><a href="mailto:ekaterina.zhuchko@ttu.ee">ekzhuc@taltech.ee</a></p>
   </div></div>
 </div>
 </body>
