--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
             <h2>My publications</h2>
             <ul>
                 <li><i>E. Zhuchko</i>, M. Veanes, G. Ebner. (2024). <b>Lean Formalization of Extended Regular Expression
-                    Matching with Lookarounds</b>>. CPP ’24 (London, Jan. 2024). 
+                    Matching with Lookarounds</b>. CPP ’24 (London, Jan. 2024). 
                     <a href="pdfs/regexinlean.pdf">pdf</a> <a href=https://github.com/ezhuchko/extended-regexes>code</a></li>
                 <li>D. Firsov, S. Laur, <i>E. Zhuchko</i>. (2022). <b>Unsatisfiability of Comparison-Based
                     Non-Malleability for Commitments</b>. In: H. Seidl, Z. Liu, C. S. Pasareanu, eds., Proc. of 19th Int. Coll. on 
