--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {
     <p><code>September 2022-now.</code><br>
       <strong>PhD @ 🇪🇪 Tallinn University of Technology.</strong></p>
     <h2 id="contact-details">💌 Contact details</h2>
-    <p><a href="mailto:ekaterina.zhuchko@ttu.ee">ekzhuc@taltech.ee</a></p>
+    <p><a href="mailto:ekaterina.zhuchko@ttu.ee">ekaterina.zhuchko@taltech.ee</a></p>
   </div></div>
 </div>
 </body>
