--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  /* background-color: #222020; */
+  background-color: #ac98b2;
 }
 
 .content {
@@ -20,7 +22,8 @@ body {
   margin: 0 auto;
   padding: 20px;
   margin-top: 30px;
-  background-color: #f7e4e8;
+  background-color: #dbc3df;
+  /* background-color: #f7e4e8; */
   border-radius: 10px;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
   position: relative;
@@ -68,7 +71,7 @@ body {
 }
 
 .name {
-  color: #ff9d9d;
+  color: #7d3180;; /* color: #ff9d9d; */
   width: "100%";
   text-align: center;
   margin: 8px;
