--- a/publications.html
+++ b/publications.html
@@ -6,13 +6,14 @@
         /* You can replicate the styles from your main page or write new ones */
         body {
           font-family: Arial, Helvetica, sans-serif;
+          background-color: #ac98b2;
         }
         .container {
           max-width: 800px;
           margin: 0 auto;
           padding: 20px;
           margin-top: 30px;
-          background-color: #f7e4e8;
+          background-color: #dbc3df;
           border-radius: 10px;
           box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
           position: relative;
