added navigation bar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,31 @@
 @font-face {
   font-family: 'Bigelow';
   src: url('Bigelow.ttf') format('truetype');
-  /* Add additional font properties here if needed */
+}
+
+/* Navigation Bar Styles */
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #ab85ad; 
+}
+
+nav ul li {
+    float: left;
+}
+
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    background-color: #7d3180; 
 }
 
 body {
@@ -102,8 +126,14 @@ body {
     <p><code>September 2022-now.</code><br>
       <strong>PhD @ 🇪🇪 Tallinn University of Technology.</strong></p>
     <h2 id="contact-details">💌 Contact details</h2>
-    <p><a href="mailto:ekaterina.zhuchko@ttu.ee">ekaterina.zhuchko@taltech.ee</a></p>
+    <p>ekaterina dot zhuchko at taltech dot ee</p>
   </div></div>
+  <nav>
+    <ul>
+        <!-- <li><a href="index.html">About Me</a></li> -->
+        <li><a href="publications.html">Publications</a></li>
+    </ul>
+  </nav>
 </div>
 </body>
 </html>
