--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,30 @@
 <head>
     <title>Publications</title>
     <style>
-        /* You can replicate the styles from your main page or write new ones */
+        /* Navigation Bar Styles */
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #ab85ad; 
+        }
+
+        nav ul li {
+            float: left;
+        }
+
+        nav ul li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        nav ul li a:hover {
+            background-color: #7d3180; 
+        }
         body {
           font-family: Arial, Helvetica, sans-serif;
           background-color: #ac98b2;
@@ -34,7 +57,13 @@
                     Notes in Comput. Sci., pp. 305-323. Springer, 2022. 
                     <a href="pdfs/nonmallcommitments.pdf">pdf</a> <a href=https://github.com/dfirsov/simulation-based-non-malleabiltiy-analysis>code</a> </li>
             </ul>
-        </div>                
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Main</a></li>
+                <!-- <li><a href="publications.html">Publications</a></li> -->
+            </ul>
+        </nav>                
     </div>
 </body>
 </html>
