added navigation bar

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {
     <p><code>September 2022-now.</code><br>
       <strong>PhD @ 🇪🇪 Tallinn University of Technology.</strong></p>
     <h2 id="contact-details">💌 Contact details</h2>
-    <p>ekaterina dot zhuchko at taltech dot ee</p>
+    <p>ekaterina [dot] zhuchko [at] taltech [dot] ee</p>
   </div></div>
   <nav>
     <ul>
