add reference - formatting

--- a/publications.html
+++ b/publications.html
@@ -48,8 +48,8 @@
         <div class="publications">
             <h2>My publications</h2>
             <ul>
-                <li>Margus Veanes, Thomas Ball, Gabriel Ebner, and <i>Ekaterina Zhuchko</i>. 2025. Symbolic Automata: Omega-
-                    Regularity Modulo Theories. Proc. ACM Program. Lang. 9, POPL, Article 2 (January 2025), 34 pages.  
+                <li>M. Veanes, T. Ball, G. Ebner, and <i>E. Zhuchko</i>. (2025). <b>Symbolic Automata: Omega-
+                    Regularity Modulo Theories</b>. POPL ’25 (Denver,Jan. 2025).  
                     <a href="pdfs/symbolicautomata.pdf">pdf</a> <a href=https://github.com/ezhuchko/RLTL-derivatives>code</a></li>
                 <li><i>E. Zhuchko</i>, M. Veanes, G. Ebner. (2024). <b>Lean Formalization of Extended Regular Expression
                     Matching with Lookarounds</b>. CPP ’24 (London, Jan. 2024). 
