add reference - formatting

--- a/publications.html
+++ b/publications.html
@@ -49,15 +49,13 @@
             <h2>My publications</h2>
             <ul>
                 <li>M. Veanes, T. Ball, G. Ebner, and <i>E. Zhuchko</i>. (2025). <b>Symbolic Automata: Omega-
-                    Regularity Modulo Theories</b>. POPL ’25 (Denver,Jan. 2025).  
+                    Regularity Modulo Theories</b>. POPL ’25 (Denver ,Jan. 2025).  
                     <a href="pdfs/symbolicautomata.pdf">pdf</a> <a href=https://github.com/ezhuchko/RLTL-derivatives>code</a></li>
                 <li><i>E. Zhuchko</i>, M. Veanes, G. Ebner. (2024). <b>Lean Formalization of Extended Regular Expression
                     Matching with Lookarounds</b>. CPP ’24 (London, Jan. 2024). 
                     <a href="pdfs/regexinlean.pdf">pdf</a> <a href=https://github.com/ezhuchko/extended-regexes>code</a></li>
                 <li>D. Firsov, S. Laur, <i>E. Zhuchko</i>. (2022). <b>Unsatisfiability of Comparison-Based
-                    Non-Malleability for Commitments</b>. In: H. Seidl, Z. Liu, C. S. Pasareanu, eds., Proc. of 19th Int. Coll. on 
-                    Theoretical Aspects of Computing, ICTAC 2022 (Tbilisi, Sept. 2022), v. 13572 of Lect. 
-                    Notes in Comput. Sci., pp. 305-323. Springer, 2022. 
+                    Non-Malleability for Commitments</b>. ICTAC 2022 (Tbilisi, Sept. 2022). 
                     <a href="pdfs/nonmallcommitments.pdf">pdf</a> <a href=https://github.com/dfirsov/simulation-based-non-malleabiltiy-analysis>code</a> </li>
             </ul>
         </div>
