add reference - formatting

--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
                     Matching with Lookarounds</b>. CPP ’24 (London, Jan. 2024). 
                     <a href="pdfs/regexinlean.pdf">pdf</a> <a href=https://github.com/ezhuchko/extended-regexes>code</a></li>
                 <li>D. Firsov, S. Laur, <i>E. Zhuchko</i>. (2022). <b>Unsatisfiability of Comparison-Based
-                    Non-Malleability for Commitments</b>. ICTAC 2022 (Tbilisi, Sept. 2022). 
+                    Non-Malleability for Commitments</b>. ICTAC ’22 (Tbilisi, Sept. 2022). 
                     <a href="pdfs/nonmallcommitments.pdf">pdf</a> <a href=https://github.com/dfirsov/simulation-based-non-malleabiltiy-analysis>code</a> </li>
             </ul>
         </div>
