--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
   </h1>
   <div class="content">
  <div class="image-section">
-    <a href="url"><img src="./images/me.jpg"></a>  
+    <img src="./images/me.jpg">  
   </div>
   <div class="text-section">
     <h2 id="about-me">💭 About me</h2>
@@ -126,7 +126,7 @@ body {
     <p><code>September 2022-now.</code><br>
       <strong>PhD @ 🇪🇪 Tallinn University of Technology.</strong></p>
     <h2 id="contact-details">💌 Contact details</h2>
-    <p>ekaterina [dot] zhuchko [at] taltech [dot] ee</p>
+    <pre>ekaterina [dot] zhuchko [at] taltech [dot] ee</pre>
   </div></div>
   <nav>
     <ul>
