--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,8 @@
         <div class="publications">
             <h2>My publications</h2>
             <ul>
+                <li>I. Varatalu, M. Veanes, <i>E. Zhuchko</i> and J. Ernits. (2025). <b>Regex Decision Procedures in Extended RE#</b>. CAV ’25 (Zagreb, Jul. 2025).  
+                    <a href="pdfs/resolver.pdf">pdf</a> <a href=https://github.com/ezhuchko/re-sharp-smt>code</a></li> 
                 <li>M. Veanes, T. Ball, G. Ebner, and <i>E. Zhuchko</i>. (2025). <b>Symbolic Automata: Omega-
                     Regularity Modulo Theories</b>. POPL ’25 (Denver, Jan. 2025).  
                     <a href="pdfs/symbolicautomata.pdf">pdf</a> <a href=https://github.com/ezhuchko/RLTL-derivatives>code</a></li>
@@ -62,7 +64,6 @@
         <nav>
             <ul>
                 <li><a href="index.html">Main</a></li>
-                <!-- <li><a href="publications.html">Publications</a></li> -->
             </ul>
         </nav>                
     </div>
