--- a/publications.html
+++ b/publications.html
@@ -48,15 +48,15 @@
         <div class="publications">
             <h2>My publications</h2>
             <ul>
-                <li>I. Varatalu, M. Veanes, <i>E. Zhuchko</i> and J. Ernits. (2025). <b>Regex Decision Procedures in Extended RE#</b>. CAV ’25 (Zagreb, Jul. 2025).  
+                <li>I. Varatalu, M. Veanes, <i>E. Zhuchko</i>, and J. Ernits. (2025). <b>Regex Decision Procedures in Extended RE#</b>. CAV ’25 (Zagreb, Jul. 2025).  
                     <a href="pdfs/resolver.pdf">pdf</a> <a href=https://github.com/ezhuchko/re-sharp-smt>code</a></li> 
                 <li>M. Veanes, T. Ball, G. Ebner, and <i>E. Zhuchko</i>. (2025). <b>Symbolic Automata: Omega-
                     Regularity Modulo Theories</b>. POPL ’25 (Denver, Jan. 2025).  
                     <a href="pdfs/symbolicautomata.pdf">pdf</a> <a href=https://github.com/ezhuchko/RLTL-derivatives>code</a></li>
-                <li><i>E. Zhuchko</i>, M. Veanes, G. Ebner. (2024). <b>Lean Formalization of Extended Regular Expression
+                <li><i>E. Zhuchko</i>, M. Veanes, and G. Ebner. (2024). <b>Lean Formalization of Extended Regular Expression
                     Matching with Lookarounds</b>. CPP ’24 (London, Jan. 2024). 
                     <a href="pdfs/regexinlean.pdf">pdf</a> <a href=https://github.com/ezhuchko/extended-regexes>code</a></li>
-                <li>D. Firsov, S. Laur, <i>E. Zhuchko</i>. (2022). <b>Unsatisfiability of Comparison-Based
+                <li>D. Firsov, S. Laur, and <i>E. Zhuchko</i>. (2022). <b>Unsatisfiability of Comparison-Based
                     Non-Malleability for Commitments</b>. ICTAC ’22 (Tbilisi, Sept. 2022). 
                     <a href="pdfs/nonmallcommitments.pdf">pdf</a> <a href=https://github.com/dfirsov/simulation-based-non-malleabiltiy-analysis>code</a> </li>
             </ul>
