--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,8 @@
         <div class="publications">
             <h2>My publications</h2>
             <ul>
+                <li><i>E. Zhuchko</i>, H. Maarand, M. Veanes, and G. Ebner. (2025). <b>Finiteness of Symbolic Derivatives in Lean</b>. ITP ’25 (Reykjavik, Sept. 2025). 
+                    <a href="pdfs/fin.pdf">pdf</a> <a href=https://github.com/ezhuchko/finiteness-derivatives>code</a></li>
                 <li>I. Varatalu, M. Veanes, <i>E. Zhuchko</i>, and J. Ernits. (2025). <b>Regex Decision Procedures in Extended RE#</b>. CAV ’25 (Zagreb, Jul. 2025).  
                     <a href="pdfs/resolver.pdf">pdf</a> <a href=https://github.com/ezhuchko/re-sharp-smt>code</a></li> 
                 <li>M. Veanes, T. Ball, G. Ebner, and <i>E. Zhuchko</i>. (2025). <b>Symbolic Automata: Omega-
