--- a/index.html
+++ b/index.html
@@ -1,180 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    @font-face {
-      font-family: 'Bigelow';
-      src: url('Bigelow.ttf') format('truetype');
-    }
-
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #ac98b2;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #ab85ad; 
-    }
-
-    nav ul li {
-      float: left;
-    }
-
-    nav ul li a {
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-
-    nav ul li a:hover {
-      background-color: #7d3180; 
-    }
-
-    .container {
-      max-width: 900px;
-      width: 90%;
-      margin: 30px auto;
-      padding: 25px 30px;
-      background-color: #dbc3df;
-      border-radius: 15px;
-      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.35);
-      position: relative;
-    }
-
-    .content {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: flex-start; 
-    }
-
-    .image-section {
-      flex: 0 0 300px;
-      padding-right: 25px;
-      display: flex;
-      justify-content: flex-start; 
-      flex-direction: column;
-      margin-top: 10px; 
-    }
-
-    .image-section img {
-      width: 100%;
-      border-radius: 10px;
-      margin-top: 0; 
-      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-    }
-
-
-    .text-section {
-      flex: 1;
-      min-width: 250px;
-      line-height: 1.8em;
-      margin-left: 20px;
-    }
-
-    .text-section p, .text-section pre {
-      color: #5a1f5b;
-      font-weight: 500;
-      line-height: 1.8em;
-      margin-bottom: 1.4em;
-      max-width: 600px;
-    }
-
-    .text-section a {
-      color: #7d3180;
-      text-decoration: underline;
-    }
-
-    .text-section strong {
-      color: #7d3180; 
-      font-weight: 600;
-    }
-
-    .text-section .degree {
-      color: #5a1a4d;
-      font-weight: 600;
-    }
-
-    .text-section h2 {
-      color: #7d3180;
-      font-weight: 600;
-      border-bottom: 2px solid #7d3180;
-      padding-bottom: 5px;
-      margin-top: 30px;
-      margin-bottom: 15px;
-      font-size: 1.6em;
-    }
-
-    .heart-svg {
-      width: 1em;
-      height: 1em;
-      vertical-align: middle;
-      animation: heartbeat 2s infinite;
-      transform-origin: center;
-      transition: transform 0.2s;
-    }
-
-    .heart-svg:hover {
-      animation: heartbeat 1s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      25%, 75% { transform: scale(1.08); }
-      50% { transform: scale(1); }
-    }
-
-    .name {
-      color: #7d3180;
-      text-align: center;
-      margin: 8px 0 25px 0;
-      font-size: 4.4em;
-      font-family: 'Bigelow';
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        width: 95%;
-        padding: 15px;
-        margin: 15px auto;
-      }
-
-      nav ul li {
-        float: none; 
-      }
-
-      nav ul li a {
-        text-align: left;
-        padding: 10px;
-      }
-
-      .name {
-        font-size: 2.5em; 
-      }
-
-      .image-section {
-        flex: 1 1 100%;
-        padding-right: 0;
-        margin-bottom: 15px;
-      }
-
-      .text-section {
-        flex: 1 1 100%;
-        margin-left: 0;
-      }
-
-      .text-section h2 {
-        font-size: 1.4em;
-      }
-    }
-  </style>
+  <title>Index</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
@@ -182,7 +10,6 @@
     Ekaterina Zhuchko
     <img class="heart-svg" src="heart.svg" alt="Embedded Heart" />
   </h1>
-
   <div class="content">
     <div class="image-section">
       <img src="./images/me.jpg" alt="Ekaterina Zhuchko">
